1998-11-29  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* gturing.c: Removed GNOMEUIINFO_JUSTIFY_RIGHT.

1998-11-28  Herbert Valerio Riedel  <hvr@hvrlab.ml.org>

	* gturing.c: added GPOINTER_TO_INT / GINT_TO_POINTER

Mon Nov 23 16:50:41 EST 1998 Gregory McLean <gregm@comstar.net>

	* gturing.c : Fixed up the clist's for the new clist
	API.

1998-09-29  Arturo Espinosa Aldama  <arturo@nuclecu.unam.mx>

	* Changed to the new gnome-app-helper API.

1998-09-28  Arturo Espinosa Aldama  <arturo@nuclecu.unam.mx>

	* A couple of typo fixes, busy beaver and dashnumbers programs,
	courtesy of Cyrille Artho <cartho@netlink.ch>. CREDITS file.

1998-08-12  Arturo Espinosa Aldama  <arturo@nuclecu.unam.mx>

	* First release. I tried to fix as many bugs as possible, because I don't
	want to know anything else about fixing this toy in the near future.
	