@@ -1,3 +1,7 @@
+1999-01-10  Nat Friedman  <nat@nat.org>
+
+	* gturing.c: Standardized the menus.
+
 1998-11-29  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>
 
 	* gturing.c: Removed GNOMEUIINFO_JUSTIFY_RIGHT.
